docs(user): add swagger user  api documentation
